--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 
 
-    
-    <title>Nolie Mar Isturis</title>
+
+    <title>Nolie Mar Isturis | Porn Star</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/images/logo.png"/>
 
     <!-- Fonts -->
