--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 
-    <title>Nolie Mar Isturis</title>
+    <title>NMI | Profile</title>
     <link rel="shortcut icon" type="image/jpg" href="assets/images/logo.png"/>
 
     <!-- Fonts -->
