added: link for graphics

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
               <li class="active" data-filter="*">All Items</li>
               <li data-filter=".wordpress">Wordpress</li>
               <li data-filter=".webdev">Angular & DOTNET Core</li>
-              <li data-filter=".graphic">Grahic Designs</li>
+              <li data-filter=".graphic"><a target="_blank" href="https://drive.google.com/drive/folders/1GiNyhui_6310K9Gx0Q0QI3O9MpsmyH5A?usp=sharing">Grahic Designs</a></li>
               <!-- <li data-filter=".illustration">Illustration</li>
               <li data-filter=".vector">Vector</li> -->
           </ul>
