--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
           </div><!-- section header -->
 
           <div class="client_items wow fadeInUp" data-wow-duration="2s">
-            <div><img src="assets/images/client_01.jpg" alt="client image" class="img-responsive"></div>
+            <div><img src="assets/images/client_01.png" alt="client image" class="img-responsive"></div>
             <div><img src="assets/images/client_02.jpg" alt="client image" class="img-responsive"></div>
             <div><img src="assets/images/client_03.jpg" alt="client image" class="img-responsive"></div>
             <div><img src="assets/images/client_04.jpg" alt="client image" class="img-responsive"></div>
