--- a/index.html
+++ b/index.html
@@ -176,11 +176,11 @@
             <h2>Nolie Mar Isturis</h2>
             <p style="color:white;">Full Stack Web Developer</p>
             <ul class="banner_social">
-              <li><a href="https://www.facebook.com/nolie.isturis"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="https://twitter.com/MarIsturis"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-              <li><a href="https://www.linkedin.com/in/nolie-mar-isturis-0a913a20a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-              <li><a href="https://join.skype.com/invite/wwXYBlh04JG9"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-              <li><a href="mailto: noliemaristuris143@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://www.facebook.com/nolie.mar.isturis"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://twitter.com/MarIsturis"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://www.linkedin.com/in/nolie-mar-isturis-0a913a20a/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="https://join.skype.com/invite/wwXYBlh04JG9"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+              <li><a target="_blank" href="mailto: noliemaristuris143@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
             </ul>
           </div><!--banner content-->
         </div><!--body_container-->
